--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Entrenamiento Cypress",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cy:run": "npx cypress run --browser chrome --headed --spec cypress/e2e/RealizarLogin.cy.js,cypress/e2e/Compra.cy.js --reporter mocha-allure-reporter",
+    "cy:run_headless": "npx cypress run --browser chrome  --spec cypress/e2e/RealizarLogin.cy.js,cypress/e2e/Compra.cy.js --reporter mocha-allure-reporter",
+    "report:allure": "allure generate allure-results --clean -o allure-report && allure open allure-report"
   },
   "repository": {
     "type": "git",
@@ -20,6 +23,8 @@
     "cypress": "^14.0.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^9.9.0"
+    "@faker-js/faker": "^9.9.0",
+    "allure-commandline": "^2.34.1",
+    "mocha-allure-reporter": "^1.4.0"
   }
 }
